--- a/Dockerfile.nuscene
+++ b/Dockerfile.nuscene
@@ -1,17 +1,21 @@
 FROM python:3.10-slim
 
-ENV DB_USER=$DB_USER
-ENV DB_PASSWORD=$DB_PASSWORD
-ENV DB_HOST=localhost
-ENV DB_PORT=5432
-ENV DB_NAME=nuScene
+ARG DB_USER
+ARG DB_PASSWORD
+ARG DB_HOST
+ARG DB_PORT
+ARG DB_NAME
+
+ENV DB_USER=${DB_USER}
+ENV DB_PASSWORD=${DB_PASSWORD}
+ENV DB_HOST=${DB_HOST}
+ENV DB_PORT=${DB_PORT}
+ENV DB_NAME=${DB_NAME}
 
 WORKDIR /app
 
 COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
-
-RUN pip install python-dotenv
 
 CMD ["python", "dbconnect.py"]
