--- a/Dockerfile.dbinsert
+++ b/Dockerfile.dbinsert
@@ -1,5 +1,8 @@
 FROM python:3.10-slim
 
+# Install PostgreSQL client to use pg_isready
+RUN apt-get update && apt-get install -y postgresql-client
+
 ARG DB_USER
 ARG DB_PASSWORD
 ARG DB_HOST
